# Audax

./: .gitignore  LICENSE  README.md  audax.py  pyproject.toml
audax.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
audax_core/: __init__.py  app.py  approval.py  artifacts.py  auto_commit.py  backends.py  models.py  orchestrator.py  progress.py  prompts.py  repo_rules.py  reviews.py  ui.py
docs/: Makefile  architecture.rst  cli-reference.rst  conf.py  getting-started.rst  index.rst  make.bat  requirements.txt  workflow.rst
docs/_build/html/: .buildinfo  api.html  architecture.html  cli-reference.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  workflow.html
docs/_build/html/.doctrees/: api.doctree  architecture.doctree  cli-reference.doctree  environment.pickle  getting-started.doctree  index.doctree  workflow.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/audax_core/: app.html  approval.html  artifacts.html  backends.html  models.html  orchestrator.html  progress.html  prompts.html  repo_rules.html  reviews.html
docs/_build/html/_sources/: api.rst.txt  architecture.rst.txt  index.rst.txt  workflow.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_static/: custom.css
tests/: test_audax.py  test_docs.py  test_live_cli.py
